// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSDockedComposer Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "500px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-docked_container"
      id="docked-composer-container"
    >
      <section
        aria-describedby="docked-composer-body"
        aria-labelledby="docked-composer-dialog-heading"
        className="slds-docked-composer slds-grid slds-grid_vertical slds-is-open"
        role="dialog"
      >
        <header
          aria-live="assertive"
          className="slds-docked-composer__header slds-grid slds-shrink-none"
        >
          <div
            className="slds-media slds-media_center slds-no-space"
          >
            <div
              className="slds-media__body"
            >
              <h2
                className="slds-truncate"
                id="docked-composer-dialog-heading"
                title="What's New this Release?"
              >
                What's New this Release?
              </h2>
            </div>
          </div>
          <div
            className="slds-col_bump-left slds-shrink-none"
          >
            <button
              className="slds-button slds-button_icon slds-button_icon-bare"
              disabled={false}
              id="docked-composer-minimize-button"
              onClick={[Function]}
              title="Minimize"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#minimize_window"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Minimize
              </span>
            </button>
            <button
              className="slds-button slds-button_icon slds-button_icon-bare"
              disabled={false}
              id="docked-composer-close-button"
              onClick={[Function]}
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                Close
              </span>
            </button>
          </div>
        </header>
        <div
          className="slds-docked-composer__body"
          id="docked-composer-body"
        />
      </section>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSDockedComposer Minimized 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "500px",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-docked_container hello-world"
      id="docked-composer-container"
    >
      <section
        aria-describedby="docked-composer-body"
        aria-labelledby="docked-composer-dialog-heading"
        className="slds-docked-composer slds-grid slds-grid_vertical slds-is-closed"
        role="dialog"
      >
        <header
          aria-live="assertive"
          className="slds-docked-composer__header slds-grid slds-shrink-none"
        >
          <div
            className="slds-media slds-media_center slds-no-space"
          >
            <div
              className="slds-media__body"
            >
              <h2
                className="slds-truncate"
                id="docked-composer-dialog-heading"
                title="What's New this Release?"
              >
                What's New this Release?
              </h2>
            </div>
          </div>
          <div
            className="slds-col_bump-left slds-shrink-none"
          >
            <button
              className="slds-button slds-button_icon slds-button_icon-bare"
              disabled={false}
              id="docked-composer-expand-button"
              onClick={[Function]}
              title="ExPaNd"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#expand_alt"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                ExPaNd
              </span>
            </button>
            <button
              className="slds-button slds-button_icon slds-button_icon-bare"
              disabled={false}
              id="docked-composer-close-button"
              onClick={[Function]}
              title="ClOsE"
              type="button"
            >
              <svg
                aria-hidden="true"
                className="slds-button__icon"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                />
              </svg>
              <span
                className="slds-assistive-text"
              >
                ClOsE
              </span>
            </button>
          </div>
        </header>
      </section>
    </div>
  </div>
</div>
`;
